# consens

./: .envrc  .gitignore  ACKNOWLEDGMENT  CMakeLists.txt  LICENSE  Makefile  README.md  devbox.json
docs/: INTEGRATION_ANALYSIS.md
examples/: cbba_test.cpp  main.cpp  simple_test.cpp  spatial_index_test.cpp
include/consens/: algorithm.hpp  consens.hpp  task.hpp  types.hpp
include/consens/cbba/: bid.hpp  bundle.hpp  bundle_builder.hpp  cbba_agent.hpp  cbba_algorithm.hpp  consensus_resolver.hpp  messages.hpp  scorer.hpp  spatial_index.hpp  types.hpp
src/consens/: consens.cpp  task.cpp
src/consens/cbba/: bundle_builder.cpp  cbba_agent.cpp  cbba_algorithm.cpp  consensus_resolver.cpp  messages.cpp  scorer.cpp  spatial_index.cpp
test/: test_bundle_builder.cpp  test_consensus_resolver.cpp  test_messages.cpp  test_scorer.cpp  test_spatial_index.cpp
